# vies-detector

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  conftest.py  fly.toml  pyproject.toml  railway.toml  render.yaml  requirements-api.txt  requirements.txt
.github/workflows/: analyze_url.yml  keepalive.yml  pipeline.yml
aggregation/: __init__.py  bias_score.py  topic_clusterer.py  window_aggregator.py
api/: __init__.py  app.py
classifier/: __init__.py  model_loader.py  sentence_classifier.py  train.py  types.py
collector/: __init__.py  article_scraper.py  deduplicator.py  preprocessor.py  rss_fetcher.py  sources.py
docs/: architecture.md
ideological/: __init__.py  reference_map.py  spectrum.py
ideological/data/: ideological_references.json
lovable/src/lib/: api.ts  hooks.ts
pipeline/: __init__.py  main_flow.py
scripts/: analyze_single_url.py  generate_spectrum_chart.py  migrate_sqlite_to_neon.py  run_pipeline.py  setup_cronjob.py  setup_db.py
tests/: test_aggregation.py  test_classifier.py  test_collector.py  test_ideological.py
